# authie

./: .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-lint.in  requirements-lint.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  codeql-analysis.yml  publish.yml
authie/docker/credential_manager/: docker_v1.py
authie_tests/: test_credential_managers.py  test_general.py
laituri/: errors.py  settings.py  types.py
laituri/docker/credential_manager/: __init__.py  credential_managers.py  docker_v1.py  dummy.py  ecr_with_role_v1.py  errors.py  registry_credentials_callback_v1.py
laituri/utils/: images.py  retry.py
laituri_tests/: mock_data.py  mock_process.py  test_credential_managers.py  test_docker_v1.py  test_general.py  test_registry_credentials_callback_v1.py  test_retry.py  test_utils.py
