[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true
exclude = "laituri_tests/test_.*"

[tool.ruff]
target-version = "py37"
line-length = 120
mccabe.max-complexity = 10
flake8-tidy-imports.ban-relative-imports = "all"
select = [
    "B", # bugbear
    "C90", # mccabe
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "T", # debugger and print
    "TID", # flake8-tidy-imports
    "W", # pycodestyle
]
ignore = []
