[metadata]
name = laituri
description = Docker Toolkit for Python
long_description = file:README.md
long_description_content_type = text/markdown
version = attr:laituri.__version__
author = Valohai
author_email = hait@valohai.com
maintainer = Ruksi Laine
maintainer_email = me@ruk.si
url = https://github.com/valohai/laituri
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
python_requires = >=3.7
packages = find:
install_requires =
    requests>=2.23,<3

[options.packages.find]
exclude =
    laituri_tests
    laituri_tests.*

[flake8]
ignore = E741
max-line-length = 119
max-complexity = 10
ban-relative-imports = all

[isort]
profile = black
line_length = 120
multi_line_output = 3
wrap_length = 120
